syntax = "proto3";

package brefv.ImuReading; // should we create a new folder in this dir or is it find in the base dir?
import "foxglove/Quaternion.proto";
import "foxglove/Vector3.proto";
import "google/protobuf/timestamp.proto";

message ImuReading {
  google.protobuf.Timestamp timestamp = 1; // should we still call it header, for consistency?

  string frame_id = 2;

  foxglove.Quaternion orientation = 3;
  repeated double orientation_covariance = 4; // array with 9 elements, row major

  foxglove.Vector3 angular_velocity = 5;
  repeated double angular_velocity_covariance = 6; // array with 9 elements, row major

  foxglove.Vector3 linear_acceleration = 7;
  repeated double linear_acceleration_covariance = 8; // array with 9 elements, row major
}
