// This file defines the protocol buffer messages for managing alarms in the keelson.alarms package.
// It includes the main Alarms message, which contains a list of Alarm messages, each representing an individual alarm.
// Each Alarm message includes details such as timestamps, source information, identifiers, descriptions, categories, priorities, acknowledgments, and multimedia content (audio and visual).
// The file also defines several enumerations for categorizing alarms, setting priorities, and specifying acknowledgment schemes.
syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Image.proto";

package keelson.alarms;

// The ALERT management messages 

// Represents a collection of alarms associated with a specific MMSI (Maritime Mobile Service Identity).
message Alarms {

  // The timestamp when the source generated the alarm list snapshot
  google.protobuf.Timestamp timestamp_source = 1;
  
  // A list of alarms 
  repeated Alarm alarms = 2;

}

// Represents an alarm message with various attributes such as timestamp, source, identifier, description, category, priority, acknowledgers, audio, visual, activation and expiration times, duration, and acknowledgment scheme.
message Alarm {
  
  // The timestamp when the alarm was initiated.
  google.protobuf.Timestamp timestamp_source = 1;
  
  // The source entity of the alarm, e.g., MASS_LAB, Landkrabb, Lab, Ship_Name.
  string source_entity = 2;  // Same as key expression "entity" ei, MASS_LAB, Landkrabb, Lab, Ship_Name 
  
  // The source ID of the alarm, e.g., radar/0, ais/0, vdr/0, engine/0.
  string source_id = 3; // Same as key expression "source_id" ei, radar/0 or ais/0 or vdr/0 or engine/0
  
  // A unique identifier for the alarm.
  string identifier = 4;   
  
  // A description of the alarm.
  string description = 5;
  
  // The category of the alarm.
  Category category = 6; 
  
  // The priority level of the alarm.
  Priority priority = 7;  

  // A list of acknowledgers supporting multi-user acknowledgment.
  repeated AlarmAcknowledgment acknowledgers = 8;

  // Audio information related to the alarm.
  Audio audio = 9; // Added
  
  // Visual information related to the alarm.
  Visual visual = 10; // Added
  
  // The UTC time when the alarm was activated.
  google.protobuf.Timestamp activation_time_utc = 11; 
  
  // The UTC time when the alarm is set to expire.
  google.protobuf.Timestamp expiration_time_utc = 12;
  
  // The duration of the alarm in seconds.
  int32 duration_seconds = 13; 
  
  // The acknowledgment scheme for the alarm.
  AckScheme ack_scheme = 14; // Added
}

message AlarmAcknowledgment {
  google.protobuf.Timestamp timestamp_acknowledged = 1;
  string acknowledged_by = 2;
}

message Audio {
  google.protobuf.Timestamp timestamp = 1;
  string text_to_voice = 1;
  bytes data = 2;
  Encoding encoding = 3;

  enum Encoding {
  MP3 = 1;
  WAV = 2;
  }
}

message Visual {
  google.protobuf.Timestamp timestamp = 1;
  string description = 1;
  RawImage image = 2;
  CompressedImage compressed_image = 3;
  CompressedVideo compressed_video = 4;
}
